v0.87 ?
-=-=-=-=-=-=-=-=-=-=
B Fixed deadlock in FXFSMonitor

* Removed many unnecessary fetches of per-thread data (slow on POSIX) in
FXException
* Made FXProcess::mappedFiles() cached
* Fixed up memory locking code to lock per VirtualAlloc region
* Disabled signals to threads (without it, gprof won't run)


v0.86 2nd April 2006
-=-=-=-=-=-=-=-=-=-=
B FXMemMap was unintentially broken on Linux for shared memory usage
B FXMemMap wasn't detecting mmap() failures at all on POSIX!
B FXMemoryPool contained a use of static data after static data deinit
B FXMtxHold wasn't being inlined on Win32
B Various FXException macros were using "e" as their temporary exception
which could cause conflict with local definitions of "e"
B FXIPCChannel wasn't retrying message sends if they part completed
R *** Issued snapshot 1
B FXPipe::writeBlock() wasn't detecting write errors on win32
B Config failed due to lack of build directory on virgin builds
B FXACL would hang on win32 if program was not running as administrator
B Fixed segfault in FXSSLDevice on process exit
B If missing zlib was causing compile errors
B Fixed occasional segfault in ~FXMemoryPool
R *** Issued snapshot 2
B i/o classes weren't resetting their acl on close() which caused
problems if instance was reused
B FXMemMap::setName() wasn't setting name of underlying FXFile
B FXSSLDevice was corrupting data if data length wasn't multiple of key size
B FXExceptionDialog would cancel instead of quit if Escape were pressed
during a fatal exception
B FXACLEntity static methods weren't threadsafe :(
B FXSSLPKey operator < and > wasn't comparing key contents
B FXSSLKey operator < and > wasn't comparing key contents
B On Win32, multiple read/write access wasn't being permitted
B FXACLIterator::atEnd() was missing
B FXACL thought Win32 null DACLs meant no access instead of total access
B FXFSMonitor was failing to invoke change handler if handler invocation
was already in progress