@@ -1,6 +1,8 @@
 v0.87 ?
 -=-=-=-=-=-=-=-=-=-=
 B Fixed deadlock in FXFSMonitor
+B FXINLINE_MUTEX_IMPLEMENTATION was broken
+B Fixed critical section nedmalloc miscompile
 
 * Removed many unnecessary fetches of per-thread data (slow on POSIX) in
 FXException
